# FAdvection_to_Second_Order

./: Cargo.toml  README.md
advection/: Cargo.toml  build.rs
advection/src/: example.rs  main.rs  photos_to_tex
input-structures/: Cargo.toml
input-structures/src/: lib.rs  maybe_original.c  smooth.c  smooth.rs
input-structures/src/advec/: TBMc0_0.txt  TBMc0_00.txt  TBMc0_0000.txt  TBMc0_001.txt  TBMc1_0.txt  TBMc1_00.txt  TBMc2_0.txt  TBMc2_00.txt  TBMc3_0.txt  TBMc3_00.txt  TBMc3_001.txt  TBMc3_0011.txt  TBMc4_0.txt  TBMc4_01.txt
input-structures/src/advec/random_examples/: TBMc0_0.txt  TBMc0_00.txt  TBMc1_00.txt  TBMc1_001.txt  TBMc2_0.txt  TBMc2_00.txt  TBMc3_0.txt  TBMc3_00.txt  TBMc3_001.txt  TBMc3_0011.txt  TBMc4_01.txt
input-structures/src/initial_data_utils/: OldAnymate2D.py  initial_input_structures.rs  main.py  mod.rs  png_gen.py  two.txt
input-structures/src/initial_data_utils/function_utils/: cfutils.rs  custom_colours.rs  mod.rs  print_macros.rs
