[package]
name = "input-structure"
version = "0.1.0"
edition = "2021"


[dependencies]
clock-measure= {path = "../clocks-measure"}
rand = "*"
regex = "*" 
text-colorizer= "*"
colour="*"
tcprint="*"
colorify="*"
dao-ansi="*"
ansi_term="*"
better_term="*"
termion= "*"
named_tuple= "*"
lazy_static= "*"
chrono= "0.4.19"
sqlite = "0.26.0"
#syntex = "0.58.1"
serde = "1.0.133"
serde_json = "1.0.74"
time = "0.3.5"
image = "0.23.14"
serde_derive = "1.0.133"
#diesel = "1.4.8"
#syn = "1.0.85"
quote = "1.0.14"
log = "0.4.14"
env_logger = "0.9.0"
#tokio = "1.15.0"
criterion = "0.3.5"
assert_cmd = "2"
predicates = "2"
#async-std = "*"
io = "0.0.2"
clap = "3.0.5"
custom_error="*"
tutil = "0.2.0"
simple_colors= "*"
num-traits = "0.2.14"
num = "0.4.0"
csv = "1.1.6"
#libc = "0.2.112"
#retainer = "0.2.2"
ordermap = "0.4.2"
structopt = "0.3.25"
derive_builder = "0.10.2"
itertools = "0.10.3"




